<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/ws_text"-->
<!--        android:text="@string/workspaces"-->
<!--        android:textSize="30sp"-->
<!--        android:textColor="@android:color/black"-->
<!--        android:layout_margin="5dp"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linear2">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ws1"
            android:text="@string/ws1"
            android:background="@color/colorButton"
            android:onClick="onClick"
            android:layout_marginEnd="5dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ws2"
            android:text="@string/ws2"
            android:background="@color/colorButton"
            android:onClick="onClick"
            android:layout_marginEnd="5dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ws3"
            android:text="@string/ws3"
            android:background="@color/colorButton"
            android:onClick="onClick"
            android:layout_marginEnd="5dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ws4"
            android:text="@string/ws4"
            android:background="@color/colorButton"
            android:onClick="onClick"
            android:layout_marginEnd="5dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ws5"
            android:text="@string/ws5"
            android:background="@color/colorButton"
            android:onClick="onClick"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear2"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@+id/linear1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ws6"
            android:text="@string/ws6"
            android:background="@color/colorButton"
            android:onClick="onClick"
            android:layout_marginEnd="5dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ws7"
            android:text="@string/ws7"
            android:background="@color/colorButton"
            android:onClick="onClick"
            android:layout_marginEnd="5dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ws8"
            android:text="@string/ws8"
            android:background="@color/colorButton"
            android:onClick="onClick"
            android:layout_marginEnd="5dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ws9"
            android:text="@string/ws9"
            android:background="@color/colorButton"
            android:onClick="onClick"
            android:layout_marginEnd="5dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ws0"
            android:text="@string/ws0"
            android:background="@color/colorButton"
            android:onClick="onClick"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear3"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/linear2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/move"
            android:text="@string/move"
            android:background="@color/colorButton"
            android:onClick="onClick"
            android:layout_marginEnd="5dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/up"
            android:text="@string/up"
            android:background="@color/colorButton"
            android:onClick="onClick"
            android:layout_marginEnd="5dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/fullscreen"
            android:text="@string/fullscreen"
            android:background="@color/colorButton"
            android:onClick="onClick"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear4"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@+id/linear3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/left"
            android:text="@string/left"
            android:background="@color/colorButton"
            android:onClick="onClick"
            android:layout_marginEnd="5dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/down"
            android:text="@string/down"
            android:background="@color/colorButton"
            android:onClick="onClick"
            android:layout_marginEnd="5dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/right"
            android:text="@string/right"
            android:background="@color/colorButton"
            android:onClick="onClick"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linear5"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear4" >

        <Button
            android:id="@+id/youtube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:onClick="onClick"
            android:text="@string/youtube"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/exec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:onClick="onClick"
            android:text="@string/exec"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/q"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:onClick="onClick"
            android:text="q"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:onClick="onClick"
            android:text="pause"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>